--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,4 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
-package.json
-package-lock.json
-.vscode/launch.json
-.vscode/tasks.json
+db.json
